---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Place linked chest on rotated chomper tile
    - Place chest in the right spot when mirrored too
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 10. 22
  Info:
    - Create data.lua
    - Setup the entity, item & recipe, and hide quality modules
    - Load the recolored sprites
    - Change what can go into the upcycler
    - Make the upcycler run continuously
    - Disable the large smoke
    - 〃
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 10. 22
  Info:
    - Initial commit