@@ -95,3 +95,17 @@ upcycler_entity.cant_insert_at_source_message_key = "inventory-restriction.cant-
  -- disable large smoke, keep the small smoke
 upcycler_entity.graphics_set.working_visualisations[2] = nil
 upcycler_entity.graphics_set_flipped.working_visualisations[2] = nil
+
+local upcycler_input = table.deepcopy(data.raw["linked-container"]["linked-chest"])
+upcycler_input.name = "upcycler-input"
+upcycler_input.collision_box = {{-0.2, -0.2}, {0.2, 0.2}}
+upcycler_input.collision_mask = {}
+upcycler_input.picture = util.empty_sprite()
+upcycler_input.inventory_size = 1
+upcycler_input.inventory_type = "normal"
+upcycler_input.gui_mode = "none"
+upcycler_input.selectable_in_game = false
+data:extend{upcycler_input}
+
+table.insert(upcycler_entity.flags, "no-automated-item-insertion")
+table.insert(upcycler_entity.flags, "no-automated-item-removal")
